prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/invalid_token.diag.txt
ERROR: invalid token '..'
testData/diagnostics/compilation_errors/lex_errors/invalid_token.nut:2:0

// EXPECT_ERROR: "invalid token"
..
^-


